--- a/Docker_API/flask_demo/requirements.txt
+++ b/Docker_API/flask_demo/requirements.txt
@@ -2,9 +2,11 @@ appdirs==1.4.4
 argon2-cffi @ file:///D:/bld/argon2-cffi_1605217273648/work
 async-generator==1.10
 attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
+audioread==2.1.9
 backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
 backports.functools-lru-cache==1.6.1
 bleach @ file:///home/conda/feedstock_root/build_artifacts/bleach_1612213472466/work
+catboost @ https://pypi.org/packages/cp38/c/catboost/catboost-0.24.4-cp38-none-win_amd64.whl
 category-encoders @ file:///home/conda/feedstock_root/build_artifacts/category_encoders_1588199510095/work/dist
 certifi==2020.12.5
 cffi @ file:///D:/bld/cffi_1613414140225/work
@@ -18,6 +20,7 @@ entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605
 feature-engine @ file:///home/conda/feedstock_root/build_artifacts/feature_engine_1611578019196/work
 flasgger==0.9.2
 Flask==1.1.2
+gunicorn==20.1.0
 idna==2.10
 imbalanced-learn @ file:///home/conda/feedstock_root/build_artifacts/imbalanced-learn_1613662486985/work
 importlib-metadata @ file:///D:/bld/importlib-metadata_1615778896299/work
@@ -29,9 +32,14 @@ jedi @ file:///D:/bld/jedi_1610146948662/work
 Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1612119311452/work
 joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
 jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
+jupyter-client @ file:///home/conda/feedstock_root/build_artifacts/jupyter_client_1615693636836/work
+jupyter-core @ file:///D:/bld/jupyter_core_1612125450516/work
+jupyterlab-pygments @ file:///home/conda/feedstock_root/build_artifacts/jupyterlab_pygments_1601375948261/work
 kiwisolver @ file:///D:/bld/kiwisolver_1610099948875/work
+librosa==0.8.0
 llvmlite==0.36.0
 MarkupSafe @ file:///D:/bld/markupsafe_1610127683324/work
+matplotlib @ file:///D:/bld/matplotlib-suite_1611858820206/work
 mistune @ file:///D:/bld/mistune_1610113104461/work
 nbclient @ file:///home/conda/feedstock_root/build_artifacts/nbclient_1614336084111/work
 nbconvert @ file:///D:/bld/nbconvert_1605402041690/work
@@ -71,6 +79,7 @@ resampy==0.2.2
 retrying==1.3.3
 scikit-learn @ file:///D:/bld/scikit-learn_1611079981849/work
 scipy @ file:///C:/bld/scipy_1615956101586/work
+seaborn @ file:///home/conda/feedstock_root/build_artifacts/seaborn-split_1611834504644/work
 Send2Trash==1.5.0
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
 sklearn-pandas @ file:///home/conda/feedstock_root/build_artifacts/sklearn-pandas_1614584646437/work
